src/test/ui/const-generics/generic_const_exprs/issue-72787.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:11:17
   |
LL |     Condition<{ LHS <= RHS }>: True
   |                 ^^^ cannot perform const operation using `LHS`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `LHS`
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:11:24
   |
LL |     Condition<{ LHS <= RHS }>: True
   |                        ^^^ cannot perform const operation using `RHS`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `RHS`
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:25:25
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                         ^ cannot perform const operation using `I`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `I`
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:25:36
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                                    ^ cannot perform const operation using `J`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `J`
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error[E0283]: type annotations needed
  --> $DIR/issue-72787.rs:21:26
   |
LL |     IsLessOrEqual<I, 8>: True,
   |                          ^^^^ cannot infer type for struct `IsLessOrEqual<I, 8_u32>`
   |
   = note: cannot satisfy `IsLessOrEqual<I, 8_u32>: True`

error[E0283]: type annotations needed
  --> $DIR/issue-72787.rs:21:26
   |
LL |     IsLessOrEqual<I, 8>: True,
   |                          ^^^^ cannot infer type for struct `IsLessOrEqual<I, 8_u32>`
   |
   = note: cannot satisfy `IsLessOrEqual<I, 8_u32>: True`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0283`.
